--- a/PowerBI.html
+++ b/PowerBI.html
@@ -8,9 +8,9 @@
             .center {text-align: center;border: 3px solid black;}
         </style>
     </head>
-  <body>
+  <body style="font-family:Times New Roman;color:black;">
       <header>
-          <div class="center">
+          <div style="background-color:blue;padding:15px;text-align:center;">
           <h1>PowerBI within a Business Sector</h1>
           </div>
       </header>
