--- a/PowerBI.html
+++ b/PowerBI.html
@@ -6,6 +6,8 @@
         <style>
             h1{background-color:blue;color:white}
             .center {text-align: center;border: 3px solid black;}
+            h2{background-color:green;color:white}
+            .center {text-align: center;border: 2px solid black;}
         </style>
     </head>
   <body style="font-family:Times New Roman;color:black;">
@@ -14,7 +16,9 @@
           <h1>PowerBI within a Business Sector</h1>
           </div>
       </header>
+      <div style="background-color:green;padding:15px;text-align:center;">
       <h2> Benifits of PowerBI compared to traditional methods</h2>
+      </div>
       <p>
         The purpose of Power BI within a business sector is to analyse and visualise the business's data. This allows
         the business to swiftly and efficiently make decisions without affecting the profitability of the business.
