--- a/PowerBI.html
+++ b/PowerBI.html
@@ -4,43 +4,85 @@
         <meta charset="utf-8">
         <title> PowerBI and its significance within the business sector</title>
         <style>
-            h1{background-color:blue;color:white}
-            .center {text-align: center;border: 3px solid black;}
-            h2{background-color:green;color:white}
-            .center {text-align: center;border: 2px solid black;}
+            body {
+                font-family: Times 'Times New Roman', Times, serif;
+                color: black;}
+                h1 {
+            color: darkslategray;
+            padding: 20px;
+            margin: 20px;
+        }
+            .img
+            {
+                 float: right;
+                 width: 40%;
+                 height: auto;
+                 margin: 15px;
+                 margin-right: 5px;
+                 border-radius: 20px;
+                 box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            }
+            h2 {
+            color: darkslategray;
+            padding: 20px;
+            margin: 20px;
+        }
+            .rectangle {
+              width: 750px;
+              height: 400px;
+              background-color: #00ba06;
+              color: white;
+              display: flex;
+              justify-content: left;
+             align-items: left;
+             text-align: left;
+             border-radius: 15px;
+             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            }
+            .list-of-benifits {
+            padding-left: -200px;
+            margin-top: 0;
+            }
+
+            .list-of-benifits li {
+             margin-bottom: 5px;
+            }
+    
         </style>
     </head>
-  <body style="font-family:Times New Roman;color:black;">
+   <body>
       <header>
-          <div style="background-color:blue;padding:15px;text-align:center;">
           <h1>PowerBI within a Business Sector</h1>
-          </div>
       </header>
-      <div style="background-color:green;padding:15px;text-align:center;">
-      <h2> Benifits of PowerBI compared to traditional methods</h2>
+      <h1> Benefits of PowerBI compared to traditional methods</h1>
+      <div class="PBI-benifits">
+      <img src="PBI_img.png" alt="PBI" class="img">
       </div>
       <p>
         The purpose of Power BI within a business sector is to analyse and visualise the business's data. This allows
         the business to swiftly and efficiently make decisions without affecting the profitability of the business.
         Power BI works by initially analysing the data, such as profits and sales, and then reflects the data through
-        data representations including charts, tables, maps, and gauges (Charest, 2023). This is a great advantage
-        compared to traditional data analysis methods, which consist of manually analysing rows of data displayed on
-        spreadsheets (Cymetrix 2023). This can be very time-consuming, along with the fact that trends and patterns have
-        to be manually identified. <br>Below is a list of the specific benefits of implementing Power BI when running a
-        business:</p>
-        <ul>
-            <li>Data visualization</li>
-            <li>Data connectivity</li>
-            <li>Real-time dashboards</li>
-            <li>Data Transformation</li>
-            <li>Natural Language Queries</li>
-            <li>Data Modeling</li>
-            <li>Collaboration and sharing</li>
-            <li>Mobile accessibility</li>
-            <li>Security and compliance</li>
-            <li>Scalability</li>
-            <li>Customization and extensions</li>
-            <li>Cost-Effectiveness</li>
-        </ul>
+        data representations including charts, tables, maps, and gauges (Charest 2023). This provides a great advantage
+        when compared to traditional data analysis methods, which consist of manually analysing rows of data displayed on
+        spreadsheets (Cymetrix 2023). This can be very time-consuming considering that trends and patterns from the data have
+        to be manually identified.</p>
+        <div class="rectangle">
+          <h2>Specific benefits of implementing Power BI when analysing data:</h2>
+          <br>
+           <ul class="list-of-benifits">
+             <li>Data visualization</li>
+             <li>Data connectivity</li>
+             <li>Real-time dashboards</li>
+             <li>Data Transformation</li>
+             <li>Natural Language Queries</li>
+             <li>Data Modeling</li>
+             <li>Collaboration and sharing</li>
+             <li>Mobile accessibility</li>
+             <li>Security and compliance</li>
+             <li>Scalability</li>
+             <li>Customization and extensions</li>
+             <li>Cost-Effectiveness</li>
+           </ul>
+        </div>   
   </body>
 </html>
