--- a/analysis.html
+++ b/analysis.html
@@ -2,43 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Data Analysis Report</title>
-    <style>
-        body {
-            background-color: lightgray;
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        nav {
-            background-color:aquamarine ;
-            color: white;
-            padding: 10px 20px;
-            text-align: center;
-        }
-        h1 {
-            color:black;
-            padding: 20px;
-            margin: 20px;
-        }
-        h2 {
-            color:black;
-            padding: 20px;
-            margin: 20px;
-        }
-        p, li {
-            color: black;
-            padding: 20px;
-            margin: 20px;
-        }
-       
-    </style>
-</head>
+    <title>Analysis - PowerBi Configuring Steps</title>
+    <link rel="stylesheet" href="powerbi.css">
 </head>
 <body>
-    <h1>Introduction</h1>
-    <p>This report analyses our customer data using a variety of graphs and charts created with Power BI. Our goal is to find significant trends and patterns in consumer spending patterns, credit ratings, and demographics. We intend to make more informed decisions that enhance our business operations and strategies by having a better understanding of these factors. All visualisations in this report are designed to make complex data easily comprehensible, assisting us in identifying key areas for improvement and action.</p>
+    <header>
+        <h1>Analysis of Customer Data</h1>
+    </header>
+    <nav class="menu">
+        <a href="Home.html">Home</a> |
+        <a href="dataset.html">Dataset Information</a> |
+        <a href="transformation.html">Data Transformation</a> |
+        <a href="analysis.html">Analysis</a>
+    </nav>
+    <section>
+        <h1>Introduction</h1> 
+        <p>This report analyses our customer data using a variety of graphs and charts created with Power BI. Our goal is to find significant trends and patterns in consumer spending patterns, credit ratings, and demographics. We intend to make more informed decisions that enhance our business operations and strategies by having a better understanding of these factors. All visualisations in this report are designed to make complex data easily comprehensible, assisting us in identifying key areas for improvement and action.</p>
 
     <h1>Analysis</h1>
     <h2>Stacked Bar Chart</h2>
@@ -95,4 +74,5 @@
     <h1>Conclusion</h1>
     <p>A businessman may create a comprehensive business strategy that maximizes their operations, marketing, and product offerings across various geographies and client categories by combining the data from all the charts. With the ultimate goal of increasing profitability and market visibility, this strategy ensures that decisions are data-driven and take into account the intricate dynamics of your clientele.</p>
 </body>
+
 </html>
